# trio

./: .gitignore  BENCHMARKS.md  CLA.md  CODEOWNERS  COMMANDS.md  CONTRIBUTING.md  INSTALL.md  LICENSE  NOTICE  README.md  SECURITY.md  config.py  install.py  pyproject.toml  requirements.txt  test_setup.py
.github/: LICENSE_DECISION.md  REPO_PROTECTION.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflow-templates/: pr-checks.yml.template
configs/: medium.yaml  nano.yaml  small.yaml
data/corpus/: .gitkeep
inference/: __init__.py  server.py
model/: __init__.py  architecture.py  attention.py
models/: trio-high.Modelfile  trio-max.Modelfile  trio-medium.Modelfile  trio-nano.Modelfile  trio-pro.Modelfile  trio-small.Modelfile
notebooks/: kaggle_train_trio.ipynb  kaggle_train_trio.py
scripts/: build_training_data.py  download_training_data.py  import_openclaw_skills.py  setup_models.py  train_default_model.py  upload_models.py
training/: cai.py  constitution.md  pretrain.py  sft.py
trio/: __init__.py  __main__.py
trio/channels/: __init__.py  base.py  cli_channel.py  discord_channel.py  email_channel.py  google_chat_channel.py  heartbeat_channel.py  imessage_channel.py  instagram_channel.py  line_channel.py  matrix_channel.py  messenger_channel.py  reddit_channel.py  signal_channel.py  slack_channel.py  sms_channel.py  teams_channel.py  telegram_channel.py  whatsapp_channel.py  whatsapp_web.py
trio/cli/: __init__.py  agent.py  daemon_cmd.py  doctor_cmd.py  gateway.py  heartbeat_cmd.py  help_cmd.py  hub_cmd.py  onboard.py  pairing_cmd.py  plugin_cmd.py  provider_cmd.py  repo_cmd.py  skill_cmd.py  status.py  update_cmd.py
trio/core/: __init__.py  approvals.py  bus.py  config.py  context.py  file_watcher.py  hardware.py  loop.py  memory.py  rag.py  repo_registry.py  router.py  sandbox.py  session.py  subagent.py
trio/cron/: __init__.py  __main__.py  daemon.py  heartbeat.py  scheduler.py
trio/hub/: __init__.py  installer.py  registry.py
trio/plugins/: __init__.py  loader.py  manager.py  manifest.py
trio/providers/: __init__.py  base.py  local.py  ollama.py  openai_compat.py  trio_local.py
trio/shared/: __init__.py  access_store.py  context_analyzer.py  guardrails.py  pairing.py  think_parser.py
trio/skills/: __init__.py  loader.py
trio/tools/: __init__.py  base.py  (+12 more)
trio_model/: __init__.py  config.py
triohub/: README.md  index.json
workspace/: AGENTS.md  SOUL.md  USER.md
(+3380 files in other folders)
